2011-02-08  Xiaomei Ji  <xji@chromium.org>

Reviewed by Dan Bernstein.

        Fix pop-up button text not rendered correctly according to its direction
        in <option>.
        https://bugs.webkit.org/show_bug.cgi?id=53642

        In adjustInnerStyle(), if m_innerBlock's direction or unicode-bidi
        changes, set it needs layout.

        * fast/text/international/pop-up-button-text-alignment-and-direction.html: Added.
        * platform/mac/fast/text/international/pop-up-button-text-alignment-and-direction-expected.checksum: Added.
        * platform/mac/fast/text/international/pop-up-button-text-alignment-and-direction-expected.png: Added.
        * platform/mac/fast/text/international/pop-up-button-text-alignment-and-direction-expected.txt: Added.
2011-02-08  Xiaomei Ji  <xji@chromium.org>

        Reviewed by Dan Bernstein.

        Fix pop-up button text not rendered correctly according to its direction
        in <option>.
        https://bugs.webkit.org/show_bug.cgi?id=53642

        In adjustInnerStyle(), if m_innerBlock's direction or unicode-bidi
        changes, set it needs layout.

        Test: fast/text/international/pop-up-button-text-alignment-and-direction.html

        * rendering/RenderMenuList.cpp:
        (WebCore::RenderMenuList::adjustInnerStyle):


Canonical link: https://commits.webkit.org/68011@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77952 268f45cc-cd09-0410-ab3c-d52691b4dbfc